sussy-amogus-balls

--- a/advanced_search.html
+++ b/advanced_search.html
@@ -5,9 +5,7 @@
         <link rel="stylesheet" href="style.css"></link>
     </head>
     <body>
-        <div class="rg">
-            <a class="rb" href="index.html" class="redirect">I killed a man</a>
-        </div>
+        <a href="index.html">I killed a man</a>
         <form action="https://www.google.com/search">
             <input type="text" name="as_q">
             <input type="text" name="as_epq">
