--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
         <link rel="stylesheet" href="style.css"></link>
     </head>
     <body>
-        <div class="rg">
-            <a class="rb" href="image_search.html" class="redirect">IMAGE</a><a class="rb" href="advanced_search.html" class="redirect">ADVANCED</a>
-        </div>
+            <a href="image_search.html">cock</a>
+            <a href="advanced_search.html">balls</a>
         <div>
             <form action="https://www.google.com/search">
-                <input class ="se" type="text" name="q" >
+                <input type="text" name="q" >
                 <input type="submit" value="Google Search">
             </form>
         </div>
