--- a/image_search.html
+++ b/image_search.html
@@ -5,9 +5,7 @@
         <link rel="stylesheet" href="style.css"></link>
     </head>
     <body>
-        <div class="rg">
-            <a class="rb" href="index.html" class="redirect">GOOGLE</a>
-        </div>
+        <a href="index.html">peener</a>
         <form action="https://www.google.com/search">
             <input type="text" name="q">
             <input type="hidden" name="tbm" value="isch">
