--- a/image_search.html
+++ b/image_search.html
@@ -4,12 +4,19 @@
         <title>Image Search</title>
         <link rel="stylesheet" href="style.css"></link>
     </head>
+
     <body>
-        <a href="index.html">peener</a>
-        <form action="https://www.google.com/search">
-            <input type="text" name="q">
-            <input type="hidden" name="tbm" value="isch">
-            <input type="submit" value="Google Search">
-        </form>
+        <a class="right_align" href="index.html">google</a>
+        
+        <div class="center_align">
+            <img src="google_logo.png" alt="GOOGLE">
+            <form  action="https://www.google.com/search">
+                <input class="search_bar" type="text" name="q">
+                <input type="hidden" name="tbm" value="isch">
+                <div>
+                    <input class="da_buttonz" type="submit" value="Search">
+                </div>
+            </form>
+        </div>
     </body>
 </html>
