--- a/advanced_search.html
+++ b/advanced_search.html
@@ -4,14 +4,30 @@
         <title>Advanced Search</title>
         <link rel="stylesheet" href="style.css"></link>
     </head>
+    
     <body>
-        <a href="index.html">I killed a man</a>
+        <a class="right_align" href="index.html">google</a>
         <form action="https://www.google.com/search">
-            <input type="text" name="as_q">
-            <input type="text" name="as_epq">
-            <input type="text" name="as_oq">
-            <input type="text" name="as_eq">
-            <input type="submit" value="Advanced Search">
+            <table>
+                <tr>
+                    <td>all these words:</td>
+                     
+                    <td><input class="advanced_field" type="text" name="as_q"></td>
+                <tr>
+                    <td>this exact word or phrase: </td>
+                    <td><input class="advanced_field" type="text" name="as_epq"></td>
+                <tr>
+                    <td>any of these words: </td>
+                    <td><input class="advanced_field" type="text" name="as_oq"></td>
+                <tr>
+                    <td>none of these words:</td>
+                    <td><input class="advanced_field" type="text" name="as_eq"></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td><input class="adv_button" type="submit" value="Advanced Search"></td>
+                </tr>
+            </div>
         </form>
     </body>
 </html>
