--- a/index.html
+++ b/index.html
@@ -4,12 +4,20 @@
         <title>Google Search</title>
         <link rel="stylesheet" href="style.css"></link>
     </head>
+
     <body>
-        <a href="image_search.html">cock</a>
-        <a href="advanced_search.html">balls</a>
-        <form action="https://www.google.com/search">
-            <input type="text" name="q" >
-            <input type="submit" value="Google Search">
-        </form>
+        <a id="image_search" href="image_search.html">image</a>
+        <a class="right_align" href="advanced_search.html">advanced</a>
+        <div class="center_align">
+            <img src="google_logo.png" alt="GOOGLE">
+            <form action="https://www.google.com/search">
+                <input class="search_bar" type="text" name="q">
+                <div>
+                    <input class="da_buttonz" type="submit" value="Search">
+                    <input class="da_buttonz" type="submit" name="btnI" value="I'm Feeling Lucky">
+                </div>
+            
+            </form>
+        </div>
     </body>
 </html>
